--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-time-machine
+title: Coursera Practice Repository
+description: This site is being utilised as a Hosting Platform for web-pages using Github Pages. 
+show_downloads: true
